un deuxieme test commit

--- a/ClassRoom1/WebContent/test.html
+++ b/ClassRoom1/WebContent/test.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-<p> ceci est une page web</p>
+<p> ceci est une page web
+ceci est une page web pour le deuxieme commit
+</p>
 </body>
 </html>
